# clpr

./: .gitignore  README.md  render.yaml
app/: next.config.ts  package-lock.json  package.json  proxy.ts
app/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
app/app/climb/: page.tsx
app/app/dashboard/: page.tsx
app/app/device/: page.tsx
app/app/garage/: page.tsx
app/app/leaderboard/: page.tsx
app/app/notes/: page.tsx
app/app/quiz/: page.tsx
app/app/signin/: page.tsx
app/components/: AuthGate.tsx  Board3D.tsx  Bootstrap.tsx  Footer.tsx  GlassNav.tsx  OfflinePrefetch.tsx  PageTransition.tsx  Reveal.tsx
app/components/climb/: ClimbView.tsx  WeekComments.tsx  WeekView.tsx
app/components/dashboard/: CheckInForm.tsx  Greeting.tsx  Log.tsx  Objective.tsx  Stats.tsx
app/components/garage/: GarageRoom.tsx  GarageScene.tsx
app/lib/: api.ts  auth.tsx  content.ts  data.ts  garageView.tsx  grade.ts  serverContent.ts  store.ts  track.ts
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/app/: __init__.py  auth.py  cache.py  content.py  data.py  db.py  device.py  grading.py  main.py  schema.py  schemas.py  security.py  seed.py  settings.py
server/app/gists/: __init__.py  api.py  build.py  llm.py  prompts.py  store.py
tui/: README.md  package-lock.json  package.json  tsconfig.json
tui/source/: TextInput.tsx  api.ts  app.tsx  auth.ts  claudeWatch.ts  cli.tsx  config.ts  editor.ts  grade.ts  markdown.ts  smoke.tsx  state.ts  theme.ts  types.ts  usage.ts  useList.ts
(+23 files in other folders)
